2012-03-03 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Source/NSKeyValueObserving.m
	* Source/NSXMLParser.m
	  char is unsigned on macppc, so don't compare it 
	  against negative values

2012-03-01  Richard Frith-Macdonald <rfm@gnu.org>

        * Version ... bump subminor number in preparation for next release.

2013-02-28  Richard Frith-Macdonald <rfm@gnu.org>

        Make release
	* Version:
	* Source/NSRegularExpression.m:
	* Source/NSURLResponse.m:
	* Source/NSString.m:
	* Source/DocMakefile:
	* Source/GSNetServices.h:
	* Documentation/news.texi:
	* Documentation/ReleaseNotes.gsdoc:
	* Headers/GNUstepBase/GSVersionMacros.h:
	* Headers/Foundation/NSNetServices.h:
	* Headers/Foundation/NSBundle.h:
	* Headers/Foundation/NSXMLDocument.h:
	* Headers/Foundation/NSXMLNode.h:
	* Headers/Foundation/NSObjCRuntime.h:
	* Headers/Foundation/NSXMLDTD.h:
	* Headers/Foundation/NSXMLDTDNode.h:
	* Headers/Foundation/NSXMLElement.h:
	* Headers/Foundation/NSXMLParser.h:
	* Tools/DocMakefile:
	* Tools/AGSParser.m:
        Bump version for new release, add release notes, clean up documentation.

2013-02-28  Richard Frith-Macdonald <rfm@gnu.org>

        * Tests/base/NSString/test00.m: Add a few tests for searching subrange
        of a string.
        * Source/GSString.m: ([rangeOfCharacterFromSet:options:range:])
        Fix for overrun when searching backwards ... spotted by Fred.
 
2013-02-17  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSAvahiRunLoopIntegration.m: Remove code which was clearing
        bitmask values needed to track whether watcher needed to be removed
        from run loop.

2013-02-16  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSURL.m: a data url ignores any base URL.
        * Source/GSAvahiClient.m: remove self from runloop on dealloc.

2013-02-15  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSPredicate.m: updates to output correct predicate format
        for binary operators.